# Custom-Camera-Vitals-Screen

./: .gitignore  README.md
CoolVitals/: settings.gradle.kts
CoolVitals/app/: build.gradle.kts
CoolVitals/app/src/main/: AndroidManifest.xml
CoolVitals/app/src/main/java/com/example/coolvitals/: MainActivity.kt
SmartSpectra/: README.md
SmartSpectra/.github/ISSUE_TEMPLATE/: DOC-ISSUE.yml
SmartSpectra/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
SmartSpectra/android/docs/: api-reference.md  headless-mode.md  metrics.md  migration-guide.md  option-1-api-key.md  option-2-oauth.md  troubleshooting.md
SmartSpectra/android/gradle/wrapper/: gradle-wrapper.properties
SmartSpectra/android/samples/: build_flavor_config.gradle  version.properties
SmartSpectra/android/samples/demo-app/: build.gradle.kts
SmartSpectra/android/samples/demo-app/src/main/: AndroidManifest.xml
SmartSpectra/android/samples/demo-app/src/main/res/drawable/: chat_bubble_ai.xml  expression_status_background.xml  ic_chat.xml  timer_background.xml
SmartSpectra/android/samples/demo-app/src/main/res/layout/: item_chat_ai.xml  (+11 more)
SmartSpectra/android/samples/minimal-app/: README.md  build.gradle.kts
SmartSpectra/android/samples/minimal-app/gradle/wrapper/: gradle-wrapper.properties
SmartSpectra/android/samples/minimal-app/src/main/: AndroidManifest.xml
SmartSpectra/cpp/: README.md
SmartSpectra/cpp/docs/: api-reference.md  headless-mode.md  linux.md  macos.md  metrics.md  migration-guide.md  windows.md
SmartSpectra/cpp/samples/: CMakeLists.txt  LICENSE  README.md
SmartSpectra/cpp/samples/dense_facemesh_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/samples/full_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/samples/full_example/gui/: CMakeLists.txt  confidence_thresholding.cpp  confidence_thresholding.hpp  opencv_element_fits.cpp  opencv_element_fits.hpp  opencv_hud.cpp  opencv_hud.hpp  opencv_label.cpp  opencv_label.hpp  opencv_metrics_group.cpp  opencv_metrics_group.hpp  opencv_trace_plotter.cpp  opencv_trace_plotter.hpp  opencv_value_indicator.cpp  opencv_value_indicator.hpp  sample_overlay_types.hpp
SmartSpectra/cpp/samples/gstreamer_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/samples/insights_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/samples/macos_swiftui_example/: .gitignore  CMakeLists.txt  README.md  smartspectra_swift_ui.entitlements
SmartSpectra/cpp/samples/macos_swiftui_example/cmake/: Info.plist.in
SmartSpectra/cpp/samples/macos_swiftui_example/scripts/: check-requirements.sh
SmartSpectra/cpp/samples/macos_swiftui_example/smartspectra_swift_ui.xcodeproj/: project.pbxproj
SmartSpectra/cpp/samples/macos_swiftui_example/smartspectra_swift_ui.xcodeproj/xcshareddata/xcschemes/: smartspectra_swift_ui.xcscheme
SmartSpectra/cpp/samples/macos_swiftui_example/swift_ui/: AppModel.swift  ContentView.swift  SmartSpectraRunner.h  SmartSpectraRunner.mm  SmartSpectraSwiftApp.swift  SmartSpectraSwiftBridge.h
SmartSpectra/cpp/samples/minimal_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/samples/smart_spectra_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/samples/winui3_example/: .gitignore  Directory.Build.props  README.md  SmartSpectraWinUI.sln
SmartSpectra/cpp/samples/winui3_example/SmartSpectraWinUI/: App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  SmartSpectraWinUI.vcxproj  app.manifest  pch.cpp  pch.h
SmartSpectra/docs/: data-types.md  model-cards-and-limitations.md
SmartSpectra/swift/: README.md
SmartSpectra/swift/SmartSpectra.xcworkspace/: contents.xcworkspacedata
SmartSpectra/swift/docs/: api-reference.md  headless-mode.md  metrics.md  migration-guide.md  option-1-api-key.md  option-2-oauth.md  troubleshooting.md  use-case-examples.md
SmartSpectra/swift/samples/demo-app/: DemoApp.swift  DemoAppView.swift
SmartSpectra/swift/samples/demo-app-UITests/: README.md  UITestHelpers.swift  demo_app_MeasurementTests.swift  demo_app_UITests.swift  demo_app_UITestsLaunchTests.swift
SmartSpectra/swift/samples/demo-app.xcodeproj/: project.pbxproj
SmartSpectra/swift/samples/demo-app.xcodeproj/xcshareddata/xcschemes/: demo-app.xcscheme  demo-appTests.xcscheme
SmartSpectra/swift/samples/demo-app/AppIcon.icon/: icon.json
SmartSpectra/swift/samples/demo-app/Checkup/: CheckupView.swift  LineChartView.swift
SmartSpectra/swift/samples/demo-app/Headless/: HeadlessSDKExample.swift
SmartSpectra/swift/samples/demo-app/Headless/Insights/: InsightsChatView.swift  InsightsChatViewModel.swift
SmartSpectra/swift/samples/demo-app/UI/: BrandColor.swift  SDKEnvironmentKey.swift  SDKExtensions.swift  StartupRecovery.swift
SmartSpectra/swift/samples/demo-app/UI/Components/: OnboardingContentView.swift  SmartSpectraButtonCheckup.swift  SmartSpectraButtonView.swift  SmartSpectraButtonViewModel.swift  SmartSpectraInfoButton.swift  SmartSpectraResultView.swift  SmartSpectraView.swift  TutorialView.swift
SmartSpectra/swift/samples/demo-app/UI/Legal/: LegalDocumentView.swift
SmartSpectra/swift/samples/demo-app/UI/Screening/: ContinuousVitalsPlotView.swift  ExpressionStatusView.swift  FaceMetricsStatusView.swift  PreviewBackgroundView.swift  ProcessingOverlayView.swift  ScreeningControlsOverlay.swift  ScreeningPlotView.swift  ScreeningView.swift  ScreeningViewModel.swift  TraceLineView.swift  VitalSection.swift
SmartSpectra/swift/samples/demo-app/UI/Web/: WebContentView.swift
SmartSpectra/swift/samples/demo-app/VideoInput/: VideoInputControlPanel.swift  VideoPickers.swift  VideoTestingView.swift
SmartSpectra/swift/samples/uikit-sample/: AppDelegate.swift  LineGraphView.swift  PaddedLabel.swift  SceneDelegate.swift  ViewController.swift
SmartSpectra/swift/samples/uikit-sample.xcodeproj/: project.pbxproj
SmartSpectra/swift/samples/uikit-sample.xcodeproj/xcshareddata/xcschemes/: uikit-sample.xcscheme
SmartSpectra/swift/samples/uikit-sample/Base.lproj/: Main.storyboard
(+38 files in other folders)
